2008-02-19  Jonathan Pobst  <monkey@jpobst.com>

	* SelectionRangeTest.cs: Add tests from Andy Hume.

2008-02-19  Jonathan Pobst  <monkey@jpobst.com> 

	* ComboBoxTest.cs: Use PreferredHeight in MethodScaleControl.
	Fixes buildbot failure.

2008-02-19  Jonathan Pobst  <monkey@jpobst.com>

	* FlowPanelTests.cs: Add test for bug #361448.

2008-02-19  Jonathan Pobst  <monkey@jpobst.com> 

	* ComboBoxTest.cs: Add test for bug #360862.

2008-02-18  Andreia Gaita <avidigal@novell.com>

	* ControlTest.cs: New test to check if, when controls don't have 
	a parent and are then reparented, their location is not changed.

2008-02-11  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingTest.cs: New test for 2.0 DataSourceNullValue property -
	which is not working by now (but should guide us to correctly
	implement some missing features in data binding).

2008-02-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingTest.cs: New test for changes in data source property (with
	a 'PropertyChange' event).

2008-02-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingTest.cs: Add new cases for DataSourceUpdateMode test,
	and also add a 2.0 WriteValueTest test.

2008-02-08  Jonathan Pobst  <monkey@jpobst.com>

	* ComboBoxTest.cs: MethodScaleControl needs to take Font into
	account, which PreferredHeight does.  Fixes a failing test.

2008_02-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListControl.cs: Add setter and events for MockItem members -
	we need them to test data binding.
	* BindingTest.cs: Add tests for 2.0 members (ControlUpdateMode,
	DataSourceUpdateMode, ReadValue), and for IsBinding property.
	Mark as NotWorking IsBindingTest and DataSourceUpdateMode as they are
	failing by now.

2008-02-08  Jonathan Pobst  <monkey@jpobst.com>

	* FormTest.cs: Commit tests from James Purcell for his new
	AutoScale implementation.  [Bug #359098]

2008-02-07  Jonathan Pobst  <monkey@jpobst.com>

	* MdiFormTest.cs: Add test for bug #336296.
